src/Antlr/AngularParser.java
// Generated from C:/Users/DELL/Desktop/untitled/src/Antlr/AngularParser.g4 by ANTLR 4.13.2
package Antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MultiLineComment=1, SingleLineComment=2, WS=3, COMMENT=4, Slash=5, GreaterThan=6, 
		Decorator=7, OpenBracket=8, CloseBracket=9, OpenParen=10, CloseParen=11, 
		OpenBrace=12, CloseBrace=13, SemiColon=14, Comma=15, Assign=16, QuestionMark=17, 
		QuestionMarkDot=18, Colon=19, Ellipsis=20, Dot=21, PlusPlus=22, MinusMinus=23, 
		Plus=24, Minus=25, BitNot=26, Not=27, Multiply=28, Modulus=29, NullCoalesce=30, 
		Hashtag=31, RightShiftArithmetic=32, LeftShiftArithmetic=33, RightShiftLogical=34, 
		LessThan=35, CloseTag=36, OpenTag=37, LessThanEquals=38, GreaterThanEquals=39, 
		Equals_=40, NotEquals=41, IdentityEquals=42, IdentityNotEquals=43, BitAnd=44, 
		BitXOr=45, BitOr=46, And=47, Or=48, MultiplyAssign=49, DivideAssign=50, 
		ModulusAssign=51, PlusAssign=52, MinusAssign=53, LeftShiftArithmeticAssign=54, 
		RightShiftArithmeticAssign=55, RightShiftLogicalAssign=56, BitAndAssign=57, 
		BitXorAssign=58, BitOrAssign=59, NullishCoalescingAssign=60, ARROW=61, 
		InterpolationStart=62, InterpolationEnd=63, Component=64, Directive=65, 
		Injectable=66, NgModule=67, Input=68, Output=69, HostListener=70, HostBinding=71, 
		Pipe=72, ViewChild=73, ViewChildren=74, ContentChild=75, ContentChildren=76, 
		TemplateRef=77, ElementRef=78, ChangeDetectorRef=79, OnInit=80, OnDestroy=81, 
		NgIf=82, NgFor=83, EventEmitter=84, Break=85, Do=86, Instanceof=87, Typeof=88, 
		Case=89, Else=90, New=91, Var=92, Catch=93, Finally=94, Return=95, Void=96, 
		Continue=97, For=98, Switch=99, While=100, Debugger=101, Function_=102, 
		This=103, Default=104, If=105, Throw=106, Delete=107, In=108, Try=109, 
		Const=110, Let=111, As=112, From=113, Of=114, Class=115, Enum=116, Extends=117, 
		Super=118, Export=119, Import=120, Implements=121, Private=122, Public=123, 
		Interface=124, Package=125, Protected=126, Static=127, NullLiteral=128, 
		BooleanLiteral=129, StringLiteral=130, DecimalLiteral=131, Identifier=132, 
		TagName=133, Backtick=134, CSSBlock=135, StylesProperty=136, Divide=137;
	public static final int
		RULE_program = 0, RULE_topLevelStatement = 1, RULE_eos = 2, RULE_importStatement = 3, 
		RULE_importFromBlock = 4, RULE_moduleItems = 5, RULE_moduleDeclaration = 6, 
		RULE_classDeclaration = 7, RULE_interfaceDeclaration = 8, RULE_importItem = 9, 
		RULE_declaration = 10, RULE_typedPropertyAssignment = 11, RULE_componentDeclaration = 12, 
		RULE_argumentObject = 13, RULE_propertyAssignment = 14, RULE_propertyAssignmenthtml = 15, 
		RULE_propertyValue = 16, RULE_bracketedLiteral = 17, RULE_navigationChain = 18, 
		RULE_navigationStep = 19, RULE_bracketAccess = 20, RULE_interfaceList = 21, 
		RULE_classBody = 22, RULE_htmlTemplateProperty = 23, RULE_propertyDeclaration = 24, 
		RULE_methodDeclaration = 25, RULE_functionDeclaration = 26, RULE_parameterList = 27, 
		RULE_parameter = 28, RULE_variableStatement = 29, RULE_variableDeclaration = 30, 
		RULE_statement = 31, RULE_expressionStatement = 32, RULE_returnStatement = 33, 
		RULE_ifStatement = 34, RULE_forStatement = 35, RULE_whileStatement = 36, 
		RULE_block = 37, RULE_singleExpression = 38, RULE_literal = 39, RULE_arrayLiteral = 40, 
		RULE_arrayLiteralhtml = 41, RULE_objectLiteral = 42, RULE_objectLiteralhtml = 43, 
		RULE_templateLiteral = 44, RULE_functionCall = 45, RULE_decoratorExpression = 46, 
		RULE_specificDecorator = 47, RULE_argumentList = 48, RULE_varModifier = 49, 
		RULE_typeAnnotation = 50, RULE_basicType = 51, RULE_genericType = 52, 
		RULE_unionType = 53, RULE_newExpression = 54, RULE_angularElement = 55, 
		RULE_regularAttribute = 56, RULE_angularAttribute = 57, RULE_classAttribute = 58, 
		RULE_tWO_WAY_BINDING = 59, RULE_angularAttributeValue = 60, RULE_angularContent = 61, 
		RULE_interpolation = 62, RULE_text = 63, RULE_sTRUCTURAL_DIRECTIVE = 64, 
		RULE_closingTag = 65, RULE_htmlInsideBackticks = 66, RULE_unaryExpression = 67, 
		RULE_methodCall = 68;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "topLevelStatement", "eos", "importStatement", "importFromBlock", 
			"moduleItems", "moduleDeclaration", "classDeclaration", "interfaceDeclaration", 
			"importItem", "declaration", "typedPropertyAssignment", "componentDeclaration", 
			"argumentObject", "propertyAssignment", "propertyAssignmenthtml", "propertyValue", 
			"bracketedLiteral", "navigationChain", "navigationStep", "bracketAccess", 
			"interfaceList", "classBody", "htmlTemplateProperty", "propertyDeclaration", 
			"methodDeclaration", "functionDeclaration", "parameterList", "parameter", 
			"variableStatement", "variableDeclaration", "statement", "expressionStatement", 
			"returnStatement", "ifStatement", "forStatement", "whileStatement", "block", 
			"singleExpression", "literal", "arrayLiteral", "arrayLiteralhtml", "objectLiteral", 
			"objectLiteralhtml", "templateLiteral", "functionCall", "decoratorExpression", 
			"specificDecorator", "argumentList", "varModifier", "typeAnnotation", 
			"basicType", "genericType", "unionType", "newExpression", "angularElement", 
			"regularAttribute", "angularAttribute", "classAttribute", "tWO_WAY_BINDING", 
			"angularAttributeValue", "angularContent", "interpolation", "text", "sTRUCTURAL_DIRECTIVE", 
			"closingTag", "htmlInsideBackticks", "unaryExpression", "methodCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'/'", "'>'", "'@'", "'['", "']'", "'('", 
			"')'", "'{'", "'}'", "';'", "','", "'='", "'?'", "'?.'", "':'", "'...'", 
			"'.'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'*'", "'%'", "'??'", 
			"'#'", "'>>'", "'<<'", "'>>>'", "'<'", "'/>'", "'</'", "'<='", "'>='", 
			"'=='", "'!='", "'==='", "'!=='", "'&'", "'^'", "'|'", "'&&'", "'||'", 
			"'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'>>>='", "'&='", 
			"'^='", "'|='", "'??='", "'=>'", "'{{'", "'}}'", "'Component'", "'Directive'", 
			"'Injectable'", "'NgModule'", "'Input'", "'Output'", "'HostListener'", 
			"'HostBinding'", "'@Pipe'", "'@ViewChild'", "'@ViewChildren'", "'@ContentChild'", 
			"'@ContentChildren'", "'TemplateRef'", "'ElementRef'", "'ChangeDetectorRef'", 
			"'@OnInit'", "'OnDestroy'", "'ngIf'", "'ngFor'", "'EventEmitter'", "'break'", 
			"'do'", "'instanceof'", "'typeof'", "'case'", "'else'", "'new'", "'var'", 
			"'catch'", "'finally'", "'return'", "'void'", "'continue'", "'for'", 
			"'switch'", "'while'", "'debugger'", "'function'", "'this'", "'default'", 
			"'if'", "'throw'", "'delete'", "'in'", "'try'", "'const'", "'let'", "'as'", 
			"'from'", "'of'", "'class'", "'enum'", "'extends'", "'super'", "'export'", 
			"'import'", "'implements'", "'private'", "'public'", "'interface'", "'package'", 
			"'protected'", "'static'", "'null'", null, null, null, null, null, "'`'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MultiLineComment", "SingleLineComment", "WS", "COMMENT", "Slash", 
			"GreaterThan", "Decorator", "OpenBracket", "CloseBracket", "OpenParen", 
			"CloseParen", "OpenBrace", "CloseBrace", "SemiColon", "Comma", "Assign", 
			"QuestionMark", "QuestionMarkDot", "Colon", "Ellipsis", "Dot", "PlusPlus", 
			"MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", "Modulus", 
			"NullCoalesce", "Hashtag", "RightShiftArithmetic", "LeftShiftArithmetic", 
			"RightShiftLogical", "LessThan", "CloseTag", "OpenTag", "LessThanEquals", 
			"GreaterThanEquals", "Equals_", "NotEquals", "IdentityEquals", "IdentityNotEquals", 
			"BitAnd", "BitXOr", "BitOr", "And", "Or", "MultiplyAssign", "DivideAssign", 
			"ModulusAssign", "PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", 
			"RightShiftArithmeticAssign", "RightShiftLogicalAssign", "BitAndAssign", 
			"BitXorAssign", "BitOrAssign", "NullishCoalescingAssign", "ARROW", "InterpolationStart", 
			"InterpolationEnd", "Component", "Directive", "Injectable", "NgModule", 
			"Input", "Output", "HostListener", "HostBinding", "Pipe", "ViewChild", 
			"ViewChildren", "ContentChild", "ContentChildren", "TemplateRef", "ElementRef", 
			"ChangeDetectorRef", "OnInit", "OnDestroy", "NgIf", "NgFor", "EventEmitter", 
			"Break", "Do", "Instanceof", "Typeof", "Case", "Else", "New", "Var", 
			"Catch", "Finally", "Return", "Void", "Continue", "For", "Switch", "While", 
			"Debugger", "Function_", "This", "Default", "If", "Throw", "Delete", 
			"In", "Try", "Const", "Let", "As", "From", "Of", "Class", "Enum", "Extends", 
			"Super", "Export", "Import", "Implements", "Private", "Public", "Interface", 
			"Package", "Protected", "Static", "NullLiteral", "BooleanLiteral", "StringLiteral", 
			"DecimalLiteral", "Identifier", "TagName", "Backtick", "CSSBlock", "StylesProperty", 
			"Divide"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<TopLevelStatementContext> topLevelStatement() {
			return getRuleContexts(TopLevelStatementContext.class);
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return getRuleContext(TopLevelStatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Import) {
				{
				{
				setState(138);
				importStatement();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Decorator || ((((_la - 92)) & ~0x3f) == 0 && ((1L << (_la - 92)) & 4438361089L) != 0)) {
				{
				{
				setState(144);
				topLevelStatement();
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelStatementContext extends ParserRuleContext {
		public ComponentDeclarationContext componentDeclaration() {
			return getRuleContext(ComponentDeclarationContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TopLevelStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterTopLevelStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitTopLevelStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitTopLevelStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelStatementContext topLevelStatement() throws RecognitionException {
		TopLevelStatementContext _localctx = new TopLevelStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelStatement);
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				componentDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EosContext extends ParserRuleContext {
		public TerminalNode SemiColon() { return getToken(AngularParser.SemiColon, 0); }
		public EosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterEos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitEos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitEos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EosContext eos() throws RecognitionException {
		EosContext _localctx = new EosContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_eos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SemiColon) {
				{
				setState(156);
				match(SemiColon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode Import() { return getToken(AngularParser.Import, 0); }
		public ImportFromBlockContext importFromBlock() {
			return getRuleContext(ImportFromBlockContext.class,0);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(Import);
			setState(160);
			importFromBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportFromBlockContext extends ParserRuleContext {
		public TerminalNode StringLiteral() { return getToken(AngularParser.StringLiteral, 0); }
		public EosContext eos() {
			return getRuleContext(EosContext.class,0);
		}
		public TerminalNode From() { return getToken(AngularParser.From, 0); }
		public TerminalNode Identifier() { return getToken(AngularParser.Identifier, 0); }
		public ModuleItemsContext moduleItems() {
			return getRuleContext(ModuleItemsContext.class,0);
		}
		public ImportFromBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importFromBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportFromBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportFromBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportFromBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportFromBlockContext importFromBlock() throws RecognitionException {
		ImportFromBlockContext _localctx = new ImportFromBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importFromBlock);
		int _la;
		try {
			setState(173);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case StringLiteral:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				match(StringLiteral);
				setState(163);
				eos();
				}
				break;
			case OpenBrace:
			case From:
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Identifier) {
					{
					setState(164);
					match(Identifier);
					}
				}

				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OpenBrace) {
					{
					setState(167);
					moduleItems();
					}
				}

				setState(170);
				match(From);
				setState(171);
				match(StringLiteral);
				setState(172);
				eos();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleItemsContext extends ParserRuleContext {
		public TerminalNode OpenBrace() { return getToken(AngularParser.OpenBrace, 0); }
		public List<ImportItemContext> importItem() {
			return getRuleContexts(ImportItemContext.class);
		}
		public ImportItemContext importItem(int i) {
			return getRuleContext(ImportItemContext.class,i);
		}
		public TerminalNode CloseBrace() { return getToken(AngularParser.CloseBrace, 0); }
		public List<TerminalNode> Comma() { return getTokens(AngularParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(AngularParser.Comma, i);
		}
		public ModuleItemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleItems; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterModuleItems(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitModuleItems(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitModuleItems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleItemsContext moduleItems() throws RecognitionException {
		ModuleItemsContext _localctx = new ModuleItemsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_moduleItems);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(OpenBrace);
			setState(176);
			importItem();
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(177);
				match(Comma);
				setState(178);
				importItem();
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(184);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleDeclarationContext extends ParserRuleContext {
		public TerminalNode Decorator() { return getToken(AngularParser.Decorator, 0); }
		public TerminalNode NgModule() { return getToken(AngularParser.NgModule, 0); }
		public TerminalNode OpenParen() { return getToken(AngularParser.OpenParen, 0); }
		public TerminalNode CloseParen() { return getToken(AngularParser.CloseParen, 0); }
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public ArgumentObjectContext argumentObject() {
			return getRuleContext(ArgumentObjectContext.class,0);
		}
		public ModuleDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterModuleDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitModuleDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitModuleDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
